@@ -1,3 +1,10 @@
+2008-05-07  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* gconf/gconf-internals.c: (gconf_log):
+	* gconf/gconf-sources.c: (gconf_sources_new_from_addresses):
+	* gconf/gconfd.c: (main): Merge the desyslogification patch
+	from Debian. Also used in Fedora now. Closes bug #126468.
+
 2008-03-17  Sven Herzberg  <sven@imendio.com>
 
       * gconf-2.m4.in: use AC_HELP_STRING for help strings (so they get
